# miso-isomorphic-example

./: .gitignore  README.md  default.nix  miso-isomorphic-example.cabal  nixpkgs.nix  stack.yaml
client/: Main.hs  cabal.config  client.cabal  default.nix
common/: Common.hs  common-test.hs  common.cabal  default.nix
server/: Main.hs  default.nix  server.cabal
shared/: Common.hs
