name:               client
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10
license:            PublicDomain

executable client
  if !impl(ghcjs)
    buildable: False

  main-is:          Main.hs
  ghcjs-options:    -dedupe
  default-language: Haskell2010
  build-depends:    aeson,
                    base < 5,
                    common,
                    containers,
                    lens,
                    miso,
                    network-uri,
                    servant


