name:               common
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10
license:            PublicDomain

library
  exposed-modules:  Common
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:    aeson,
                    base < 5,
                    containers,
                    lens,
                    miso,
                    network-uri,
                    servant

executable common-test
  main-is:          common-test.hs
  ghc-options:      -Wall
  default-language: Haskell2010
  other-modules:    Common
  build-depends:    base < 5,
                    containers,
                    lens,
                    miso,
                    network-uri,
                    servant

