name:               common
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10
license:            PublicDomain

library
  exposed-modules:  Common
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:    aeson,
                    base < 5,
                    containers,
                    lens,
                    miso,
                    network-uri,
                    servant

