name:               server
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10
license:            PublicDomain

executable server
  if impl(ghcjs)
    buildable: False

  main-is:          Main.hs
  ghc-options:      -O2 -threaded -Wall
  default-language: Haskell2010
  build-depends:    aeson,
                    base < 5,
                    common,
                    containers,
                    http-types,
                    lens,
                    lucid,
                    miso,
                    mtl,
                    network-uri,
                    servant,
                    servant-lucid,
                    servant-server,
                    wai,
                    wai-extra,
                    warp

